# Task37.2QML_MediaPlayer

./: CMakeLists.txt  README.md  main.cpp  main.qml
